examples/c/error-codes/undefined/UB-CEM2-bad-static.output
UB-CEM2-bad-static.c:8:15: error: member reference base type '_Atomic(union u)' is not a structure or union
      return u.x;
             ~^~
1 error generated.
